# hypernodes

./: .gitignore  .uvignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPLETE_DAFT_FIXES_SUMMARY.md  DAFT_CODE_ANALYSIS_AND_FIXES.md  DAFT_CODE_GENERATION_MIGRATION_PLAN.md  DELETED_FILES.md  DUAL_NODE_IMPLEMENTATION.md  EXECUTOR_ARCHITECTURE_FINAL.md  EXECUTOR_REFACTORING_DISCUSSION.md  FIXES_APPLIED_SUMMARY.md  FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN_V2.md  IMPORT_GUIDE.md  MIGRATION_PLAN.md  MODAL_DAFT_ISSUE_SUMMARY.md  MODAL_SERIALIZATION_FIX.md  NESTED_PROGRESS_FIX.md  PACKAGE_STATUS.txt  PARALLEL_EXECUTION.md  PUBLISHING.md  PYDANTIC_TEST_FIXES.md  PYPI_PREPARATION_SUMMARY.md  QUICK_PUBLISH_GUIDE.md  README.md  README_PUBLISHING.md  REFACTORING_QUICK_REFERENCE.md  REORGANIZATION_SUMMARY.md  RERANKER_CACHING_FIX.md  SERIALIZATION_FIX_SUMMARY.md  SOLID_REFACTORING.md  VISUALIZATION_FIX_SUMMARY.md  WARP.md  analysis_notes.md  graphviz_modern_style.py  hypernodes.yaml  mint.json  (+6 more)
.ruler/: 0-instructions.md  1-design_principles.md  2-code_structure.md  3-theme_detection.md  code_structure.md  debugging_visualization.md  hanging_arrow_fix.md  instructions.md  mcp.json  ruler.toml  visualization_best_practices.md
conf/: node_registry.yaml
docs/: HyperNodes Pipeline System Specification - Hierarc 9cd1cc6de7964214883bfa8befd40207.md  OPTIMIZATION_GUIDE.md  README.md  SUMMARY.md  batch_reranker_benchmark.md  best-practices.mdx  graphviz_theme_notes.md  introduction.mdx  pytorch_daft_compatibility.md
examples/: daft_backend_complex_types_example.py  daft_backend_example.py  dask_engine_example.py  fluent_api_example.py  mlflow.ipynb  modal_backend_test.py
guides/: API_MIGRATION.md  ASYNC_PERFORMANCE_ANALYSIS.md  BENCHMARKS.md  BENCHMARKS_SUMMARY.md  BENCHMARK_QUICK_REFERENCE.md  CACHING_FIX_SUMMARY.md  COMPLETE_FIX_SUMMARY.md  DAFT_BACKEND_DEBUGGING.md  DAFT_BACKEND_PYDANTIC_AUTO_CONVERSION.md  DAFT_CODE_GENERATION_FIXED.md  DAFT_CODE_RUNTIME_EQUIVALENCE.md  DAFT_COLUMN_PRESERVATION_BUG.md  DAFT_ENGINE_REFACTORING_PLAN.md  DAFT_ENGINE_V2_IMPLEMENTATION.md  DAFT_FIX_SUMMARY.md  DAFT_GRID_SEARCH_RESULTS.md  DAFT_IMPLEMENTATION_PLAN.md  DAFT_JUPYTER_FIX_CELLS.md  DAFT_KERNEL_CRASH_FIX.md  DAFT_MAP_OVER_IMPLEMENTATION.md  DAFT_OPTIMIZATION_GUIDE.md  DAFT_OPTIMIZATION_RESULTS.md  DAFT_PERFORMANCE_ISSUE.md  DAFT_PYDANTIC_ELEGANT_SOLUTION.md  DAFT_QUICK_WIN.md  DAFT_RESULTS.md  DAFT_STATEFUL_IMPLEMENTATION.md  DAFT_TRANSLATION_GUIDE.md  DAFT_UDF_PERFORMANCE_GUIDE.md  DAFT_V2_IMPLEMENTATION.md  DASK_ENGINE_IMPLEMENTATION.md  DUAL_NODE_IMPLEMENTATION.md  ELEGANT_PYDANTIC_SUMMARY.md  ENGINE_ORCHESTRATOR_REFACTORING_COMPLETE.md  FIXES_APPLIED.md  FLUENT_API.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  JUPYTER_QUICK_FIX.py  MIGRATION_PROGRESS.md  (+37 more)
notebooks/: batch_api.ipynb  daft_benchmarks.ipynb  daft_cache.ipynb  daft_v2.ipynb  debug_viz.ipynb  engines.ipynb  guide.ipynb  hpn_to_daft.ipynb  hypernodes_to_daft.ipynb  map_benchmark_io_cpu.ipynb  modal.ipynb  playground.ipynb  retrieval.ipynb  telemetry_examples.ipynb  test_theme_detection.ipynb  test_widget_fix.ipynb  theme_detection_probe.ipynb  theme_test.ipynb  ui_handler_demo.ipynb  v2.ipynb  verify_ipywidget.ipynb  verify_nested_viz.ipynb  visualization_showcase.ipynb
outputs/: AUTO_PRUNING_SUMMARY.md  COMPLETE_INVESTIGATION_SUMMARY.md  COMPLETE_RERANKING_OPTIMIZATION_GUIDE.md  CORRECTED_OPTIMIZATION_GUIDE.md  DUAL_MODE_SUMMARY.md  DUAL_NODE_CONTRACT_UPDATE.md  EXACT_CHANGES_FOR_YOUR_SCRIPT.md  EXECUTIVE_SUMMARY.md  FINAL_CORRECTED_RECOMMENDATIONS.md  FINAL_OPTIMIZATION_SUMMARY.md  FINAL_SUMMARY_GRID_SEARCH.md  IMPLEMENTATION_SUMMARY.md  PYARROW_CONTRACT_IMPLEMENTATION_SUMMARY.md  REAL_BENCHMARK_RESULTS.md  RETRIEVAL_OPTIMIZATION_RECOMMENDATIONS.md  VISUAL_SUMMARY.md  benchmark_output.txt  daft_parallelism_investigation_results.md  grid_search_findings.md  reranking_optimization_findings.md  resource_utilization_summary.md  stateful_batch_benchmark_results.md
scripts/: BENCHMARK_RESULTS.md  BENCHMARK_SUMMARY.txt  CORRECT_daft_cls_usage.py  FINAL_OPTIMIZATION_REPORT.md  INDEX.md  QUICK_REFERENCE.md  README_BENCHMARK.md  README_RETRIEVAL_OPTIMIZATION.md  RETRIEVAL_OPTIMIZATION_SUMMARY.md  RUN_SEMANTIC_SEARCH.md  USE_CODE_GENERATION_WITH_RETRIEVAL.md  _debug_graph.py  _test_modal_torch_cpu.py  benchmark_batch_udf.py  benchmark_custom_vs_daft.py  benchmark_daft_optimizations.py  benchmark_daft_parallelism.py  benchmark_engines.py  benchmark_final.py  benchmark_final_comparison.py  benchmark_hypernodes_vs_daft.py  benchmark_optimization_techniques.py  benchmark_real_performance.py  benchmark_reranking_daft.py  benchmark_reranking_daft_optimized.py  benchmark_reranking_optimized.py  benchmark_reranking_standalone.py  benchmark_retrieval_optimizations.py  benchmark_simple.py  benchmark_stateful_after.py  benchmark_stateful_batch.py  benchmark_stateful_before.py  benchmark_stateful_shared.py  benchmark_ultra_fast.py  check_ops.py  compare_daft_vs_standalone.py  compare_retrieval_versions.py  custom_models.py  daft_engine_benchmark.py  debug_actual_visualization.py  (+178 more)
tests/: README.md  README_MODAL.md  repro_pipeline_output_type.py  repro_pipeline_output_type_mapping.py  test_bind.py  (+72 more)
(+249 files in other folders)
