[project]
name = "hypernodes"
version = "0.1.0"
description = "Hierarchical, Modular Pipeline System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "daft>=0.6.11",
    "loky>=3.5.6",
    "networkx>=3.0",
    "pydantic-to-pyarrow>=0.1.6",
]

[project.optional-dependencies]
viz = [
    "graphviz>=0.20",
    "rich>=13.0.0",
    "ipykernel<7",
    "ipywidgets>=8.1.7",
    "tqdm>=4.67.1",
    "plotly>=6.3.1",
    "nbformat>=5.10.4",
]

modal = [
    "modal>=0.64.0",
    "cloudpickle>=3.0.0",
]

telemetry = [
    "logfire>=2.0.0",
    "tqdm>=4.67.1",
    "rich>=13.0.0",
    "plotly>=5.18.0",
]

examples = [
    "daft>=0.6.7",
    "diskcache>=5.6.3",
    "numpy>=2.3.4",
    "pydantic>=2.12.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hypernodes"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
# Ignore old tests that may be broken or deprecated
norecursedirs = [
    "old",
    ".*",
    "build",
    "dist",
    "*.egg",
]
