[project]
name = "hypernodes"
version = "0.1.0"
description = "Hierarchical, Modular Pipeline System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
daft = [
    "daft>=0.6.11",
]

viz = [
    "graphviz>=0.20",
]

notebook = [
    "ipykernel<7",
    "ipywidgets>=8.1.7",
    "nbformat>=5.10.4",
]

telemetry = [
    "logfire>=2.0.0",
    "tqdm>=4.67.1",
    "rich>=13.0.0",
    "plotly>=5.18.0",
]

all = [
    "daft>=0.6.11",
    "graphviz>=0.20",
    "ipykernel<7",
    "ipywidgets>=8.1.7",
    "nbformat>=5.10.4",
    "tqdm>=4.67.1",
    "rich>=13.0.0",
    "plotly>=5.18.0",
    "logfire>=2.0.0",
]

modal = [
    "modal>=0.64.0",
    "cloudpickle>=3.0.0",
]

examples = [
    "colbert-ai>=0.2.22",
    "daft>=0.6.7",
    "diskcache>=5.6.3",
    "ipykernel>=6.31.0",
    "model2vec>=0.7.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pylate>=1.0.0",
    "pytrec-eval>=0.5",
    "rank-bm25>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hypernodes"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
# Ignore old tests that may be broken or deprecated
norecursedirs = [
    "old",
    ".*",
    "build",
    "dist",
    "*.egg",
]
