[project]
name = "hypernodes"
version = "0.3.0"
description = "A hierarchical, modular pipeline system for ML/AI workflows"
authors = [
    {name = "Gilad Rubin", email = "me@giladrubin.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
keywords = ["pipeline", "caching", "ml", "ai", "workflow", "dag", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
daft = [
    "daft>=0.6.11",
]

viz = [
    "graphviz>=0.20",
]

notebook = [
    "ipykernel<7",
    "ipywidgets>=8.1.7",
    "nbformat>=5.10.4",
]

telemetry = [
    "logfire>=2.0.0",
    "tqdm>=4.67.1",
    "rich>=13.0.0",
    "plotly>=5.18.0",
]

all = [
    "daft>=0.6.11",
    "graphviz>=0.20",
    "ipykernel<7",
    "ipywidgets>=8.1.7",
    "nbformat>=5.10.4",
    "tqdm>=4.67.1",
    "rich>=13.0.0",
    "plotly>=5.18.0",
    "logfire>=2.0.0",
]

modal = [
    "modal>=0.64.0",
    "cloudpickle>=3.0.0",
]

examples = [
    "colbert-ai>=0.2.22",
    "daft>=0.6.7",
    "diskcache>=5.6.3",
    "ipykernel>=6.31.0",
    "model2vec>=0.7.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pylate>=1.0.0",
    "pytrec-eval>=0.5",
    "rank-bm25>=0.2.2",
]

[project.urls]
Homepage = "https://github.com/gilad-rubin/hypernodes"
Repository = "https://github.com/gilad-rubin/hypernodes"
Issues = "https://github.com/gilad-rubin/hypernodes/issues"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hypernodes"]

[tool.hatch.build.targets.wheel.force-include]

# Exclude old/deprecated code from distribution
[tool.hatch.build]
exclude = [
    "src/hypernodes/old/",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.uv]
# Exclude old/deprecated code from uv operations

[tool.uv.sources]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_mode = "auto"
# Ignore old tests that may be broken or deprecated
norecursedirs = [
    "old",
    ".*",
    "build",
    "dist",
    "*.egg",
]
